external-crates/move/crates/move-package-alt/tests/data/edition_unknown/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/edition_unknown/Move.toml"`
  ┌─ "tests/data/edition_unknown/Move.toml":3:11
  │
3 │ edition = "foobar"
  │           ^^^^^^^^
  │
  = unsupported edition 'foobar', expected one of '2025, 2024, 2024.beta, legacy'
